--- a/README.org
+++ b/README.org
@@ -91,18 +91,20 @@ if [ "$yc" == "y" ] || [ "$yc" == "yes" ]; then
     else
         yadm clone $cloneCommand
     fi
-    yadm remote set-url --push origin git@github.com:<<username>>/<<username>>.git
-fi
 
-# TODO: May need `yadm stash' here
-# yadm stash
+    yadm remote set-url --push origin git@github.com:<<username>>/<<username>>.git
+    yadm gitconfg --unset core.worktree
+
+    # TODO: May need `yadm stash' here
+    # yadm stash
+fi
 
 nixos-generate-config || :
 
 read -p $'Tell me your secrets!\n' secrets < /dev/tty
 secCloneCommand="-w $worktree --no-bootstrap $secrets"
 if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
-    if [ -d "$HOME/.local/share/yadm/repo.git" ]; then
+    if [ -d "$HOME/.local/share/yadm-sec/repo.git" ]; then
         read -p $'Secrets repo already exists! Force clone secrets?\n' forceSecrets < /dev/tty
         if [ "$forceSecrets" == "y" ] || [ "$forceSecrets" == "yes" ]; then
             yadm sec clone -f $secCloneCommand
@@ -110,6 +112,8 @@ if [ "$secrets" != "n" ] || [ "$secrets" != "no" ]; then
     else
         yadm sec clone $secCloneCommand
     fi
+
+    yadm sec gitconfg --unset core.worktree
 
     # TODO: May need `yadm sec stash' here
     # yadm sec stash
