--- a/README.org
+++ b/README.org
@@ -126,7 +126,7 @@ if [ "$ys" == "y" ] || [ "$ys" == "yes" ]; then
     if [ "$impermanent" == "y" ] || [ "$impermanent" == "yes" ]; then
         yadm gitconfig core.worktree $worktree
     fi
-    GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm -w $worktree submodule update --init --depth 1 --recursive --remote --force
+    GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm --work-tree $worktree submodule update --init --depth 1 --recursive --remote --force
     yadm gitconfig core.worktree $HOME
     make -f "$HOME/.emacs.d/makefile" soft-init
 fi
