--- a/README.org
+++ b/README.org
@@ -23,7 +23,7 @@ syvl.org
 
 #+begin_src hy
 "
-#! nix-shell -p python310 python310Packages.bakery yadm git gnumake fd emacs
+#! nix-shell -p python310 python310Packages.bakery yadm git gnumake fd emacs gnupg2 pinentry transcrypt
 #! nix-shell -I nixpkgs=https://github.com/<<username>>/nixpkgs/archive/j.tar.gz
 #! nix-shell -i hy
 "
@@ -34,18 +34,18 @@ syvl.org
 (del (get argv 0))
 
 (import bakery)
-(import bakery [make nixos-generate-config yadm zfs])
+(import bakery [echo gpg make nixos-generate-config yadm zfs])
 (import click)
-(import os [path])
+(import os [path] [chmod])
 (import pathlib [Path])
 (import stat)
 (import socket)
 
 (defn yes? [ var ] (in (.lower var) (, "y" "yes")))
 (defn no? [ var ] (if (in (.lower var) (, "n" "no")) False var))
-(defn repo-exists [[secret False]]
-      (and (.exists Path (.join path home ".local" "share" (if secret "yadm-sec" "yadm") "repo.git"))
-           (yes? (input (+ (if secret "Secrets r" "R") "epo already exists! Force clone?")))))
+(defn repo-exists []
+      (and (.exists Path (.join path home ".local" "share" "yadm" "repo.git"))
+           (yes? (input "Repo already exists! Force clone?"))))
 #+end_src
 
 Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frederich's]] comment [[https://stackoverflow.com/questions/12791997/how-do-you-do-a-simple-chmod-x-from-within-python#comment26692909_12792002][here]]:
@@ -59,10 +59,10 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
    (.option click "-b" "--bootstrap" :prompt True)
    (.option click "-i" "--impermanent" :prompt True)
    (.option click "-I" "--initialize-submodules" :prompt True)
-   (.option click "-s" "--secrets" :prompt True)
+   (.option click "-Y" "--import-yubikey" :prompt True)
    (.option click "-y" "--yadm-clone" :prompt True)
    (.option click "-z" "--zfs-root" :prompt True)
-   (defn main [ impermanent yadm-clone secrets bootstrap zfs-root initialize-submodules ]
+   (defn main [ impermanent import-yubikey yadm-clone secrets bootstrap zfs-root initialize-submodules ]
          (let [ home (.home Path)
                 impermanent (yes? impermanent)
                 worktree (if impermanent
@@ -70,24 +70,22 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
                             home)
                 yadm-clone (yes? yadm-clone)
                 zfs-root (yes? zfs-root)
-                secrets (no? secrets)
+                import-yubikey (yes? import-yubikey)
                 initialize-submodules (yes? initialize-submodules)
                 bootstrap (yes? bootstrap)
                 clone-opts { "w" worktree "no-bootstrap" True }
                 bootstrap-path (Path f"{home}/.config/yadm/bootstrap")
-                secret-bootstrap-path (Path f"{home}/.config/yadm-sec/bootstrap")
                 bootstrap-bin (bakery :program- bootstrap-path)
-                secret-bootstrap-bin (bakery :program- secret-bootstrap-path)
                 dataset f"{(.gethostname socket)}/<<username>>" ]
+              (if import-yubikey
+                  (do (gpg :fetch True)
+                      (gpg :card-status True)
+                      (| (echo (+ (.join "" (.split (get (gpg :fingerprint True "jeet.ray@syvl.org" :m/list True) 1))) ":6:")) (gpg :import-ownertrust))))
               (if yadm-clone
                   (do (.clone yadm :f (repo-exists) #** clone-opts "https://github.com/<<username>>/<<username>>.git")
-                      (.remote yadm :m/starter-args (, "set-url") :push True "origin" "git@github.com:<<username>>/<<username>>.git")))
+                      (.remote yadm :m/starter-args (, "set-url") :push True "origin" "git@github.com:<<username>>/<<username>>.git")
+                      (.crypt yadm unlock)))
               (nixos-generate-config :run True)
-              (if secrets
-                  (do (.sec yadm :m/starter-args (, "clone") :f (repo-exists True) #** clone-opts secrets)
-                      (.sec yadm "gitconfig" "core.worktree" home)
-                      (chmod-bootstrap secret-bootstrap-path)
-                      (secret-bootstrap-bin worktree)))
               (if initialize-submodules
                   (do (if impermanent
                           (.gitconfig yadm "core.worktree" worktree))
