--- a/README.org
+++ b/README.org
@@ -23,7 +23,7 @@ syvl.org
 
 #+begin_src hy
 "
-#! nix-shell -p python310 python310Packages.bakery yadm git gnumake fd emacs gnupg2 pinentry transcrypt
+#! nix-shell -p python310 python310Packages.bakery yadm git gnumake fd emacs gnupg2 pinentry git-crypt
 #! nix-shell -I nixpkgs=https://github.com/<<username>>/nixpkgs/archive/j.tar.gz
 #! nix-shell -i hy
 "
