--- a/README.org
+++ b/README.org
@@ -22,11 +22,11 @@ syvl.org
 #+end_src
 
 #+begin_src hy
-"
+#[69509b6b-2e23-4c82-bbe3-0ec2a7dd916e[
 #! nix-shell -p python310 python310Packages.bakery yadm git gnumake fd emacs gnupg2 pinentry git-crypt
 #! nix-shell -I nixpkgs=https://github.com/<<username>>/nixpkgs/archive/j.tar.gz
 #! nix-shell -i hy
-"
+]69509b6b-2e23-4c82-bbe3-0ec2a7dd916e]
 #+end_src
 
 #+begin_src hy
@@ -34,18 +34,19 @@ syvl.org
 (del (get argv 0))
 
 (import bakery)
-(import bakery [echo gpg make nixos-generate-config yadm zfs])
+(import bakery [chown echo gpg git make nixos-generate-config yadm zfs])
 (import click)
-(import os [path] [chmod])
+(import os [path listdir chmod getlogin expanduser symlink])
 (import pathlib [Path])
 (import stat)
 (import socket)
 
 (defn yes? [ var ] (in (.lower var) (, "y" "yes")))
 (defn no? [ var ] (if (in (.lower var) (, "n" "no")) False var))
-(defn repo-exists []
-      (and (.exists Path (.join path home ".local" "share" "yadm" "repo.git"))
-           (yes? (input "Repo already exists! Force clone?"))))
+(defn iyes? [ query ] (yes? (input query)))
+(defn repo-exists [ yadm-repo ]
+      (and (.exists Path yadm-repo)
+           (iyes? "Repo already exists! Force clone?"))))
 #+end_src
 
 Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frederich's]] comment [[https://stackoverflow.com/questions/12791997/how-do-you-do-a-simple-chmod-x-from-within-python#comment26692909_12792002][here]]:
@@ -62,8 +63,14 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
    (.option click "-Y" "--import-yubikey" :prompt True)
    (.option click "-y" "--yadm-clone" :prompt True)
    (.option click "-z" "--zfs-root" :prompt True)
-   (defn main [ impermanent import-yubikey yadm-clone secrets bootstrap zfs-root initialize-submodules ]
-         (let [ home (.home Path)
+   (.option click "-p" "--primary-user" :prompt True)
+   (.option click "-u" "--user-repo" :prompt True)
+   (defn main [ impermanent import-yubikey git-clone yadm-clone secrets bootstrap zfs-root initialize-submodules primary-user user-repo ]
+         (let [ current-user (getlogin)
+                home (.home Path)
+                username "<<username>>"
+                primary-user (if (yes? primary-user) username (if (iyes? "Is the current user the primary user?") current-user primary-user))
+                primary-home (expanduser f"~{primary-user}")
                 impermanent (yes? impermanent)
                 worktree (if impermanent
                             f"/persist/{home}"
@@ -74,22 +81,46 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
                 initialize-submodules (yes? initialize-submodules)
                 bootstrap (yes? bootstrap)
                 clone-opts { "w" worktree "no-bootstrap" True }
+                submodule-opts { "m/starter-args" (, "update")
+                                 "m/exports" { "GIT_DISCOVERY_ACROSS_FILESYSTEM" 1 }
+                                 "init" True
+                                 "recursive" True
+                                 "remote" True
+                                 "force" True }
                 bootstrap-path (Path f"{home}/.config/yadm/bootstrap")
                 bootstrap-bin (bakery :program- bootstrap-path)
-                dataset f"{(.gethostname socket)}/<<username>>" ]
+                reponame "<<reponame>>"
+                user-repo (if (yes? user-repo) f"{home}/{reponame}" user-repo)
+                primary-repo f"{primary-home}/{reponame}"
+                yadm-repo f"{home}/.local/share/yadm/repo.git"
+                dataset f"{(.gethostname socket)}/{primary-user}" ]
               (if import-yubikey
                   (do (gpg :fetch True)
                       (gpg :card-status True)
                       (| (echo (+ (.join "" (.split (get (gpg :fingerprint True "jeet.ray@syvl.org" :m/list True) 1))) ":6:")) (gpg :import-ownertrust))))
+              (if (not (or (.exists path user-repo) (len (listdir user-repo))))
+                  (do (if (not (or zfs-root (iyes? "Are you using a shared dataset for your central repo, such as `bcachefs' or `btrfs'?")))
+                          (do (.mkdir (Path primary-repo) :parents True :exist-ok True)
+                              (if (not (and (= current-user primary-user) (.exists path user-repo)))
+                                  (symlink primary-repo user-repo))))
+                      (.clone git f"https://github.com/{username}/{username}.git" user-repo)
+                      (.remote (git :C user-repo) :m/starter-args (, "set-url") :push True "origin" f"git@github.com:{username}/{username}.git")
+
+                      ;; If I unlock before I update the submodules, I can use `ssh://' urls immediately
+                      (.crypt (git :C user-repo) "unlock")
+                      (.submodule (git :C user-repo) #** submodule-opts)
+
+                      (chown :R True f"{primary-user}:{primary-user}" user-repo)))
               (if yadm-clone
-                  (do (.clone yadm :f (repo-exists) #** clone-opts "https://github.com/<<username>>/<<username>>.git")
-                      (.remote yadm :m/starter-args (, "set-url") :push True "origin" "git@github.com:<<username>>/<<username>>.git")
-                      (.crypt yadm unlock)))
+                  (do (.clone yadm :f (repo-exists home) #** clone-opts user-repo)
+                      (.remote (git :C user-repo) :m/starter-args (, "add") current-user yadm-repo)
+                      (.crypt yadm unlock)
+                      (.submodule yadm #** submodule-opts)))
               (nixos-generate-config :run True)
               (if initialize-submodules
                   (do (if impermanent
                           (.gitconfig yadm "core.worktree" worktree))
-                      (.submodule (yadm :C worktree) :m/starter-args (, "update") :m/exports { "GIT_SSL_NO_VERIFY" 1 "GIT_DISCOVERY_ACROSS_FILESYSTEM" 1 } :init True :recursive True :remote True :force True)
+                      (.submodule (yadm :C worktree) #** submodule-opts)
                       (.gitconfig yadm "core.worktree" home)
                       (make :f f"{worktree}/.emacs.d/makefile" "soft-init")))
               (if bootstrap
@@ -169,9 +200,9 @@ mkfilePath := $(abspath $(lastword $(MAKEFILE_LIST)))
 mkfileDir := $(dir $(mkfilePath))
 
 et:
-|chmod +x $(mkfileDir)/settings/*.sh
-|$(mkfileDir)/settings/org-export.sh $(mkfileDir)/README.org
-|$(mkfileDir)/settings/org-tangle.sh $(mkfileDir)/README.org
+|chmod +x $(mkfileDir)/settings/bin/*
+|$(mkfileDir)/settings/bin/org-export $(mkfileDir)/README.org
+|$(mkfileDir)/settings/bin/org-tangle $(mkfileDir)/README.org
 
 commit:
 |git -C $(mkfileDir) commit --allow-empty-message -am ""
