--- a/README.org
+++ b/README.org
@@ -23,7 +23,7 @@ syvl.org
 
 #+begin_src hy
 #[69509b6b-2e23-4c82-bbe3-0ec2a7dd916e[
-#! nix-shell -p python310 python310Packages.bakery yadm git gnumake fd emacs gnupg2 pinentry git-crypt
+#! nix-shell -p python310Packages.bakery yadm git gnumake fd emacs gnupg2 git-crypt tailscale tailapi pass
 #! nix-shell -I nixpkgs=https://github.com/<<username>>/nixpkgs/archive/j.tar.gz
 #! nix-shell -i hy
 ]69509b6b-2e23-4c82-bbe3-0ec2a7dd916e]
@@ -34,16 +34,20 @@ syvl.org
 (del (get argv 0))
 
 (import bakery)
-(import bakery [chown echo gpg git make nixos-generate-config yadm zfs])
+(import bakery [chown echo gpg git make nixos-generate-config systemctl tailapi tailscale uname yadm zfs])
 (import click)
 (import os [path listdir chmod getlogin expanduser symlink])
 (import pathlib [Path])
 (import stat)
 (import socket)
+(import uuid [uuid4 uuid5])
 
 (defn yes? [ var ] (in (.lower var) (, "y" "yes")))
-(defn no? [ var ] (if (in (.lower var) (, "n" "no")) False var))
+(defn dyes? [ var default ] (if (yes? var) default var))
 (defn iyes? [ query ] (yes? (input query)))
+(defn idyes? [ query default ] (dyes? (input query) default))
+(defn no? [ var ] (if (in (.lower var) (, "n" "no")) False var))
+(defn ino? [ query ] (no? (input query)))
 (defn repo-exists [ yadm-repo ]
       (and (.exists Path yadm-repo)
            (iyes? "Repo already exists! Force clone?"))))
@@ -57,15 +61,20 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
 
 #+begin_src hy
 #@((.command click)
-   (.option click "-b" "--bootstrap" :prompt True)
-   (.option click "-i" "--impermanent" :prompt True)
-   (.option click "-I" "--initialize-submodules" :prompt True)
+   (.option click "-b" "--bootstrap" :prompt "Run yadm bootstrap")
+   (.option click "-i" "--impermanent" :prompt "Root wiped on boot")
+   (.option click "-I" "--initialize-yadm-submodules" :prompt True)
+   (.option click "-I" "--initialize-primary-submodules" :prompt True)
    (.option click "-Y" "--import-yubikey" :prompt True)
    (.option click "-y" "--yadm-clone" :prompt True)
-   (.option click "-z" "--zfs-root" :prompt True)
-   (.option click "-p" "--primary-user" :prompt True)
-   (.option click "-u" "--user-repo" :prompt True)
-   (defn main [ impermanent import-yubikey git-clone yadm-clone secrets bootstrap zfs-root initialize-submodules primary-user user-repo ]
+   (.option click "-z" "--zfs-root" :prompt "On a zfs root")
+   (.option click "-p" "--primary-user" :prompt "You're the primary user (or enter another user here)")
+   (.option click "-u" "--user-repo" :prompt "Use the default user repo (or enter another repo path here)")
+   (.option click "-g" "--gpg-key-id" :prompt "Use the default gpg key id (or enter another id, such as the name, email address, etc. here)")
+   (.option click "-t" "--tailscale-domain" :prompt "Use the default Tailscale domain (or enter another one here)")
+   (.option click "-a" "--tailscale-api-key" :prompt "Use the default Tailscale api key (or enter another one here)")
+   (.option click "-A" "--tailscale-api-command" :prompt "Use the default Tailscale api command (or enter another one here)")
+   (defn main [ impermanent import-yubikey git-clone yadm-clone secrets bootstrap zfs-root initialize-yadm-submodules initialize-primary-submodules primary-user user-repo gpg-key-id tailscale-domain tailscale-api-key tailscale-api-command ]
          (let [ current-user (getlogin)
                 home (.home Path)
                 username "<<username>>"
@@ -78,7 +87,8 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
                 yadm-clone (yes? yadm-clone)
                 zfs-root (yes? zfs-root)
                 import-yubikey (yes? import-yubikey)
-                initialize-submodules (yes? initialize-submodules)
+                initialize-yadm-submodules (yes? initialize-yadm-submodules)
+                initialize-primary-submodules (yes? initialize-primary-submodules)
                 bootstrap (yes? bootstrap)
                 clone-opts { "w" worktree "no-bootstrap" True }
                 submodule-opts { "m/starter-args" (, "update")
@@ -90,16 +100,28 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
                 bootstrap-path (Path f"{home}/.config/yadm/bootstrap")
                 bootstrap-bin (bakery :program- bootstrap-path)
                 reponame "<<reponame>>"
-                user-repo (if (yes? user-repo) f"{home}/{reponame}" user-repo)
+                user-repo (dyes? user-repo f"{home}/{reponame}")
                 primary-repo f"{primary-home}/{reponame}"
                 yadm-repo f"{home}/.local/share/yadm/repo.git"
-                dataset f"{(.gethostname socket)}/{primary-user}" ]
+                hostname (.gethostname socket)
+                dataset f"{hostname}/{primary-user}"
+                gpg-key-id (dyes? gpg-key-id "jeet.ray@syvl.org")
+                tailscale-domain (dyes? tailscale-domain "sylvorg.github")
+                tailscale-api-key (dyes? tailscale-api-key None)
+                tailscale-api-command (dyes? tailscale-api-command "pass show keys/api/tailscale/jeet.ray")
+                tailscale-api-command-split (.split tailscale-api-command)
+                tailscale-api-command-bin (bakery (get tailscale-api-command-split 0))
+                tailscale-api-command-args (cut tailscale-api-command-split 1 None)
+                tailscaled-port (dyes? tailscaled-port 41641) ]
               (if import-yubikey
                   (do (gpg :fetch True)
-                      (gpg :card-status True)
-                      (| (echo (+ (.join "" (.split (get (gpg :fingerprint True "jeet.ray@syvl.org" :m/list True) 1))) ":6:")) (gpg :import-ownertrust))))
+                      (gpg :card-status True))
+                  (if (setx gpg-key (ino? "Path to gpg private key?"))
+                      (gpg :import True gpg-key)
+                      (raise (ValueError "Sorry; a gpg key is necessary to continue!"))))
+              (| (echo (+ (.join "" (.split (get (gpg :fingerprint True gpg-key-id :m/list True) 1))) ":6:")) (gpg :import-ownertrust))
               (if (not (or (.exists path user-repo) (len (listdir user-repo))))
-                  (do (if (not (or zfs-root (iyes? "Are you using a shared dataset for your central repo, such as `bcachefs' or `btrfs'?")))
+                  (do (if (not (or zfs-root (iyes? "Are you using a shared dataset for your central repo, such as via `bcachefs' or `btrfs'? ")))
                           (do (.mkdir (Path primary-repo) :parents True :exist-ok True)
                               (if (not (and (= current-user primary-user) (.exists path user-repo)))
                                   (symlink primary-repo user-repo))))
@@ -108,21 +130,50 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
 
                       ;; If I unlock before I update the submodules, I can use `ssh://' urls immediately
                       (.crypt (git :C user-repo) "unlock")
-                      (.submodule (git :C user-repo) #** submodule-opts)
+                      (.submodule (git :C user-repo) :m/regular-args (, ".password-store") #** submodule-opts)
 
+                      (if (or (in "tailscale0:" (ifconfig :m/split True))
+                              (in "tun0:" (ifconfig :m/split True)))
+                          (if (!= (uname :o True :m/str True) "Android")
+                              (if impermanent
+                                  (.up tailscale :hostname (uuid5 (uuid4) (str (uuid4)))
+                                                 :authkey (.create (tailapi :domain tailscale-domain
+                                                                            :recreate-response True
+                                                                            :api-key (or tailscale-api-key
+                                                                                         (tailscale-api-command-bin #* tailscale-api-command-args)))
+                                                                            :ephemeral True
+                                                                            :just-key True
+                                                                            "bootstrap"))
+                                  (.up tailscale :hostname hostname
+                                                 :authkey (.create (tailapi :domain tailscale-domain
+                                                                            :recreate-response True
+                                                                            :api-key (or tailscale-api-key
+                                                                                         (tailscale-api-command-bin #* tailscale-api-command-args)))
+                                                                            :ephemeral (iyes? "Set the ephemeral property for this tailscale authkey: ")
+                                                                            :preauthorized (iyes? "Set the pre-authorized property for this tailscale authkey: ")
+                                                                            :reusable (iyes? "Set the reusable property for this tailscale authkey: ")
+                                                                            :just-key True
+                                                                            (input "Tags to set for this authkey, as a string of tags separated by spaces: ")))))
+                          (raise (ValueError "Sorry; enable the tailscale daemon to continue!")))
+
+                      (if initialize-primary-submodules
+                          (do (.submodule (git :C user-repo) #** submodule-opts)
+                              (for [ m (.submodule yadm :m/starter-args (, "foreach") :recursive True :m/list True) ]
+                                   (.crypt (git :C (+ user-repo "/" (get (.split m "'") 1))) "unlock" :m/ignore-stderr True))))
                       (chown :R True f"{primary-user}:{primary-user}" user-repo)))
               (if yadm-clone
                   (do (.clone yadm :f (repo-exists home) #** clone-opts user-repo)
                       (.remote (git :C user-repo) :m/starter-args (, "add") current-user yadm-repo)
                       (.crypt yadm unlock)
-                      (.submodule yadm #** submodule-opts)))
+                      (if initialize-yadm-submodules
+                          (do (if impermanent
+                                  (.gitconfig yadm "core.worktree" worktree))
+                              (.submodule yadm #** submodule-opts)
+                              (for [ m (.submodule yadm :m/starter-args (, "foreach") :recursive True :m/list True) ]
+                                   (.crypt (git :C (+ worktree "/" (get (.split m "'") 1))) "unlock" :m/ignore-stderr True))
+                              (.gitconfig yadm "core.worktree" home)
+                              (make :f f"{worktree}/.emacs.d/makefile" "soft-init")))))
               (nixos-generate-config :run True)
-              (if initialize-submodules
-                  (do (if impermanent
-                          (.gitconfig yadm "core.worktree" worktree))
-                      (.submodule (yadm :C worktree) #** submodule-opts)
-                      (.gitconfig yadm "core.worktree" home)
-                      (make :f f"{worktree}/.emacs.d/makefile" "soft-init")))
               (if bootstrap
                   (do (chmod-bootstrap bootstrap-path)
                       (bootstrap-bin worktree)))
@@ -178,15 +229,50 @@ Adapted from [[https://unix.stackexchange.com/users/48083/graeme][Graeme's]] ans
 and [[https://stackoverflow.com/users/2092245/ferhtgoldaraz][ferhtgoldaraz's]] answer [[https://stackoverflow.com/a/15696250/10827766][here]]:
 
 #+begin_src shell
-read -p $'Curl index script?\n' cis < /dev/tty
-if [ "$cis" == "y" ] || [ "$cis" == "yes" ]; then
+read -p $'Curl index script?\n' curlIndexScript < /dev/tty
+if [ "$curlIndexScript" == "y" ] || [ "$curlIndexScript" == "yes" ]; then
     curl -fsSLo $bootstrap https://raw.githubusercontent.com/sylvorg/sylvorg.github.io/main/index.hy
 fi
 #+end_src
 
 #+begin_src shell
-chmod +x $bootstrap
-$bootstrap || echo "Sorry; something happened! Please try again!"
+if hash nix 2> /dev/null; then
+    read -p $'Install nix?\n' installNix < /dev/tty
+    if [ "$installNix" == "y" ] || [ "$installNix" == "yes" ]; then
+        read -p $'Install nix as multi-user?\n' installMulti < /dev/tty
+        if [ "$installMulti" == "y" ] || [ "$installMulti" == "yes" ]; then
+            sh <(curl -fsSL https://nixos.org/nix/install) --daemon
+        else
+            sh <(curl -fsSL https://nixos.org/nix/install) --no-daemon
+        fi
+    fi
+    chmod +x $bootstrap
+    $bootstrap $@ || echo "Sorry; something happened! Please try again!"
+else
+    pacapt="$HOME/.local/share/syvl-pacapt"
+    read -p $'Curl pacapt?\n' curlPacapt < /dev/tty
+    if [ "$curlPacapt" == "y" ] || [ "$curlPacapt" == "yes" ]; then
+        if [ "$(uname -o)" == "Android" ]; then
+            pkg install curl
+            ln -s /data/data/com.termux/files/usr/lib/libssl.so /data/data/com.termux/files/usr/lib/libssl.so.1.1 || :
+            ln -s /data/data/com.termux/files/usr/lib/libcrypto.so /data/data/com.termux/files/usr/lib/libcrypto.so.1.1 || :
+            apt update
+            apt upgrade
+        fi
+        curl -fsSLo $pacapt https://raw.githubusercontent.com/icy/pacapt/ng/pacapt
+    fi
+    read -p $'Install dependencies?\n' setupDependencies < /dev/tty
+    if [ "$setupDependencies" == "y" ] || [ "$setupDependencies" == "yes" ]; then
+        chmod +x $pacapt
+        $pacapt -Syyu yadm git make fd emacs gnupg git-crypt pass python
+        pip install --force-reinstall --upgrade https://github.com/syvlorg/bakery/archive/main.tar.gz requests
+        tailapiGit="$HOME/.local/share/tailapi.git"
+        git clone https://github.com/syvlorg/tailapi.git $tailapiGit || git -C $tailapiGit pull origin main
+        chmod +x $tailapiGit/tailapi.py
+        ln -sf $tailapiGit/tailapi.py /data/data/com.termux/files/usr/bin/tailapi
+    fi
+    hy $bootstrap $@ || echo "Sorry; something happened! Please try again!"
+fi
 #+end_src
 
 * makefile
