--- a/README.org
+++ b/README.org
@@ -78,7 +78,7 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
          (let [ current-user (getlogin)
                 home (.home Path)
                 username "<<username>>"
-                primary-user (if (yes? primary-user) username (if (iyes? "Is the current user the primary user?") current-user primary-user))
+                primary-user (if (yes? primary-user) username (if (iyes? "Current user the primary user: ") current-user primary-user))
                 primary-home (expanduser f"~{primary-user}")
                 impermanent (yes? impermanent)
                 worktree (if impermanent
@@ -116,12 +116,12 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
               (if import-yubikey
                   (do (gpg :fetch True)
                       (gpg :card-status True))
-                  (if (setx gpg-key (ino? "Path to gpg private key?"))
+                  (if (setx gpg-key (ino? "Path to gpg private key: "))
                       (gpg :m/subcommand "import" gpg-key)
                       (raise (ValueError "Sorry; a gpg key is necessary to continue!"))))
               (| (echo (+ (.join "" (.split (get (gpg :fingerprint True gpg-key-id :m/list True) 1))) ":6:")) (gpg :import-ownertrust True))
               (if (not (or (.exists path user-repo) (len (listdir user-repo))))
-                  (do (if (not (or zfs-root (iyes? "Are you using a shared dataset for your central repo, such as via `bcachefs' or `btrfs'? ")))
+                  (do (if (not (or zfs-root (iyes? "Currently using a shared dataset for your central repo, such as via `bcachefs' or `btrfs': ")))
                           (do (.mkdir (Path primary-repo) :parents True :exist-ok True)
                               (if (not (and (= current-user primary-user) (.exists path user-repo)))
                                   (symlink primary-repo user-repo))))
@@ -242,7 +242,7 @@ and [[https://stackoverflow.com/users/2092245/ferhtgoldaraz][ferhtgoldaraz's]] a
 
 #+begin_src shell
 if [ -f "$bootstrap" ]; then
-    read -p $'Curl hylang index script?\n' curlIndexScript < /dev/tty
+    read -p $'Curl hylang index script: ' curlIndexScript < /dev/tty
 else
     curlIndexScript="yes"
 fi
