--- a/README.org
+++ b/README.org
@@ -36,7 +36,7 @@ syvl.org
 (import bakery)
 (import bakery [chown echo gpg git make nixos-generate-config systemctl tailapi tailscale uname yadm zfs])
 (import click)
-(import os [path listdir chmod getlogin expanduser symlink])
+(import os [path listdir chmod getlogin symlink])
 (import pathlib [Path])
 (import stat)
 (import socket)
@@ -79,7 +79,7 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
                 home (.home Path)
                 username "<<username>>"
                 primary-user (if (yes? primary-user) username (if (iyes? "Current user the primary user: ") current-user primary-user))
-                primary-home (expanduser f"~{primary-user}")
+                primary-home (.expanduser path f"~{primary-user}")
                 impermanent (yes? impermanent)
                 worktree (if impermanent
                             f"/persist/{home}"
