--- a/README.org
+++ b/README.org
@@ -179,8 +179,7 @@ Adapted from [[https://stackoverflow.com/users/180464/eric-frederich][eric.frede
                   (do (.set zfs :snapdir "visible" dataset :m/run True)
                       (.inherit zfs :r True "snapdir" dataset :m/run True))))))
 
-(if (= __name__ "__main__")
-    (main :obj (Dict (dict))))
+(if (= __name__ "__main__") (main))
 #+end_src
 
 * index.html
